--- a/server/package.json
+++ b/server/package.json
@@ -1,13 +1,13 @@
 {
   "name": "server",
   "version": "1.0.0",
-  "description": "dbms lab project",
+  "description": "Food ordering Website-Backend",
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js"
   },
-  "author": "navaneeth udith pranaya abhinav rammohan",
+  "author": "Pranaya",
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.20.0",
